<resources>
    <string name="app_name">BlitzBar</string>
    <string name="search_radius">Search Radius</string>
    <string name="location_public">Location Public</string>
    <string name="notifications">Notifications</string>
    <string name="sounds">Sounds</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="back_button">Back Button</string>
    <string name="miles">Miles</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="blitzbar_logo_cutout_textless">BlitzBar logo cutout textless</string>
    <string name="button">Button</string>
    <string name="google_places_key">AIzaSyDaQaR0aDza_nDhgYTeg-w6kaXsgP8Yzhw</string>
    <string name="about_description">BlitzBar serves to give up-to-date wait times on what any college student is looking for on any social night, bars. The app is currently exclusive to the University of Wisconsin - Madison. Developed for the Fall 2021 semester of CS 407 by Jake DeWitte, Aristidis Giannopoulos, Jorge Tenorio, and Lukas Wehrli</string>
</resources>