<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <?ignore
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/settingsMenu"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/social_media_menu" />
    ?>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:layout_marginEnd="24dp"
        android:text="@string/settings"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/DarkMode"
        app:layout_constraintEnd_toEndOf="@+id/DarkMode"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/DarkMode"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="15dp"
        android:onClick="onSwitch"
        android:text="@string/dark_mode"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Sounds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/Sounds"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="16dp"
        android:onClick="onSwitch"
        android:text="@string/sounds"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/DarkMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DarkMode" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/Notifications"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="18dp"
        android:onClick="onSwitch"
        android:text="@string/notifications"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/LocationPublic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/DarkMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sounds" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/LocationPublic"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="20dp"
        android:onClick="onSwitch"
        android:text="@string/location_public"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/SearchRadiusBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/DarkMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Notifications" />

    <EditText
        android:id="@+id/SearchRadiusBox"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="270dp"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/SearchRadius"
        app:layout_constraintTop_toBottomOf="@+id/LocationPublic"
        android:hint="@string/miles"
        android:autofillHints="@string/miles"/>

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="45dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator"
        android:contentDescription="@string/back_button"/>

    <TextView
        android:id="@+id/SearchRadius"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="65dp"
        android:text="@string/search_radius"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/SearchRadiusBox"
        app:layout_constraintEnd_toStartOf="@+id/SearchRadiusBox"
        app:layout_constraintLeft_toLeftOf="@+id/DarkMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SearchRadiusBox" />
</androidx.constraintlayout.widget.ConstraintLayout>