<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252627"
    tools:context=".SettingsActivity">

    <?ignore
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/settingsMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/social_media_menu_dark" />
        ?>

    <TextView
        android:id="@+id/textViewDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:layout_marginEnd="24dp"
        android:text="@string/settings"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/DarkModeDark"
        app:layout_constraintEnd_toEndOf="@+id/DarkModeDark"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/DarkModeDark"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="15dp"
        android:trackTint="@android:color/darker_gray"
        android:text="@string/dark_mode"
        android:textSize="24sp"
        android:onClick="onSwitch"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/SoundsDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDark" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/SoundsDark"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginStart="65dp"
        android:trackTint="@android:color/darker_gray"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sounds"
        android:textSize="24sp"
        android:onClick="onSwitch"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@+id/DarkModeDark"
        app:layout_constraintBottom_toTopOf="@+id/NotificationsDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DarkModeDark" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/NotificationsDark"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="18dp"
        android:text="@string/notifications"
        android:textSize="24sp"
        android:onClick="onSwitch"
        android:trackTint="@android:color/darker_gray"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@+id/DarkModeDark"
        app:layout_constraintBottom_toTopOf="@+id/LocationPublicDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SoundsDark" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/LocationPublicDark"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="20dp"
        android:text="@string/location_public"
        android:textSize="24sp"
        android:onClick="onSwitch"
        android:trackTint="@android:color/darker_gray"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/SearchRadiusBoxDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/DarkModeDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NotificationsDark" />

    <EditText
        android:id="@+id/SearchRadiusBoxDark"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="270dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="number"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/SearchRadiusDark"
        app:layout_constraintTop_toBottomOf="@+id/LocationPublicDark"
        android:autofillHints="@string/miles"
        android:hint="@string/miles"
        android:textColorHint="@color/white"/>

    <ImageButton
        android:id="@+id/backButtonDark"
        android:layout_width="45dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator"
        android:onClick="onClick"
        app:tint="@android:color/white"
        android:contentDescription="@string/back_button"/>

    <TextView
        android:id="@+id/SearchRadiusDark"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="65dp"
        android:text="@string/search_radius"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/SearchRadiusBoxDark"
        app:layout_constraintEnd_toStartOf="@+id/SearchRadiusBoxDark"
        app:layout_constraintLeft_toLeftOf="@+id/DarkModeDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SearchRadiusBoxDark" />
</androidx.constraintlayout.widget.ConstraintLayout>